# django_tutorial

./: pyproject.toml
.direnv/python-3.11.2/: pyvenv.cfg
MyWebApp/: Makefile  db.sqlite3
MyWebApp/config/: settings.py  urls.py
MyWebApp/pages/: views.py
MyWebApp/products_app/: admin.py  apps.py  models.py  views.py
MyWebApp/products_app/migrations/: 0001_initial.py  0002_alter_product_name_alter_product_price_and_more.py  0003_time.py
MyWebApp/templates/: about.html  base.html  home.html
MyWebApp/templates/products_apps/: detail.html
