[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["TaleeBarbieri"]
packages = [{include = "django-tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
pysqlite3 = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
