[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["TaleeBarbieri <talee.alexei@hotmail.com>"]
packages = [{include = ".direnv" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.1"
pysqlite3 = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
